// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeDetail /> No ingredients data in recipe 1`] = `
<div
  className="p2 bg-white"
  style={undefined}
>
  <h2
    className="h2"
  >
    Mock Recipe
  </h2>
  <img
    alt="Mock Recipe"
    className="fit"
    src={undefined}
  />
  <div>
    <span>
      Mock Category
    </span>
    <span />
  </div>
  <h3>
    Ingredients
  </h3>
  <h3>
    Steps
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
    <li>
      Step 3
    </li>
    <li>
      Step 4
    </li>
    <li>
      Step 5
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    Open
  </a>
</div>
`;

exports[`<RecipeDetail /> No props or state input 1`] = `
<p
  className="h3 p2 bg-white italic center"
  style={undefined}
>
  Select the recipe to see details
</p>
`;

exports[`<RecipeDetail /> No steps data in recipe 1`] = `
<div
  className="p2 bg-white"
  style={undefined}
>
  <h2
    className="h2"
  >
    Mock Recipe
  </h2>
  <img
    alt="Mock Recipe"
    className="fit"
    src={undefined}
  />
  <div>
    <span>
      Mock Category
    </span>
    <span />
  </div>
  <h3>
    Ingredients
  </h3>
  <ul>
    <li>
      Ingredient 1
    </li>
    <li>
      Ingredient 2
    </li>
    <li>
      Ingredient 3
    </li>
  </ul>
  <h3>
    Steps
  </h3>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    Open
  </a>
</div>
`;

exports[`<RecipeDetail /> Valid classnames props input 1`] = `
<div
  className="p2 bg-white classname-test"
  style={undefined}
>
  <h2
    className="h2"
  >
    Mock Recipe
  </h2>
  <img
    alt="Mock Recipe"
    className="fit"
    src={undefined}
  />
  <div>
    <span>
      Mock Category
    </span>
    <span />
  </div>
  <h3>
    Ingredients
  </h3>
  <ul>
    <li>
      Ingredient 1
    </li>
    <li>
      Ingredient 2
    </li>
    <li>
      Ingredient 3
    </li>
  </ul>
  <h3>
    Steps
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
    <li>
      Step 3
    </li>
    <li>
      Step 4
    </li>
    <li>
      Step 5
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    Open
  </a>
</div>
`;

exports[`<RecipeDetail /> Valid recipes props input 1`] = `
<div
  className="p2 bg-white"
  style={undefined}
>
  <h2
    className="h2"
  >
    Mock Recipe
  </h2>
  <img
    alt="Mock Recipe"
    className="fit"
    src={undefined}
  />
  <div>
    <span>
      Mock Category
    </span>
    <span />
  </div>
  <h3>
    Ingredients
  </h3>
  <ul>
    <li>
      Ingredient 1
    </li>
    <li>
      Ingredient 2
    </li>
    <li>
      Ingredient 3
    </li>
  </ul>
  <h3>
    Steps
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
    <li>
      Step 3
    </li>
    <li>
      Step 4
    </li>
    <li>
      Step 5
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    Open
  </a>
</div>
`;
